# lazy-ai-coder

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Makefile  README.md  example.env  go.mod  go.sum  language.md  main.go  pyproject.toml  setup-mcp.sh  start.sh  stop.sh  vue.md
cmd/: cmd.go  config.go  debug.go  export.go  help.go  import.go  load.go  mcp.go  password.go  root.go  web.go
config/: config.example.yaml  config.yaml  cursor_commands.yaml  cursor_rules.yaml  prompts.yaml  prompts_code_review_improved.yaml
deploy/: .env.example  README.md  docker-compose.yaml
deploy/db/: schema_mysql.sql  schema_pg.sql  schema_sqlite.sql
deploy/nginx/: generate-ssl.sh  nginx.conf
deploy/notebooks/: README.md
doc/: code-rag-kb.md
docs/: docs.go  swagger.json  swagger.yaml
example/: CONTRIBUTING-example.md  README-example.md  auth.go  contribution.tmpl  llm_chain_demo.go  llm_function_call_demo.go  readme.tmpl  readme_generate.go
internal/assets/: loader.go
internal/auth/: example_integration.go  jwt_session.go  password_service.go  user_service.go
internal/chat/: chat_routes.go  chat_service.go
internal/chatrecord/: agent.go  agent_eino.go  agent_test.go  repository.go  repository_gorm.go  repository_test.go  service.go  service_test.go
internal/codekg/: handlers.go  model.go  service.go  service_test.go
internal/debug/: handlers.go
internal/diagram/: diagram_routes.go  diagram_service.go
internal/handlers/: assets_handlers.go  auth_middleware.go  chat_record_handlers.go  chat_record_handlers_test.go  cursor_command_handlers.go  cursor_rule_handlers.go  (+10 more)
script/: code_review_example.py  mcp_client_example.py  test_sse.html  test_sse_client.py  use_mcp_prompts.py
tests/: README.md  conftest.py  manual_test_examples.sh  pytest.ini  requirements.txt  run-tests.sh  test-gitlab-mr.sh  test_mcp.py  test_mcp_detailed.sh  test_mcp_http.py  test_mcp_stdio.sh
web/: .env.example  EXPORT_FORMAT_EXAMPLE.yaml  index.html  package-lock.json  package.json  vite.config.ts
(+199 files in other folders)
